<li> 02/12/13 Reinstated block alpha to flavoursoft. Thanks to A Pukhov