@@ -10688,35 +10688,35 @@ void Softsusy<SoftPars>::msoftSLHA(ostream & out) {
       out << "    22    "; printRow(out, displayMh2Squared()); 
       out << "      # mH2^2(Q)" << endl;    
       
-      out << "    31    "; printRow(out, ccbSqrt(displaySoftMassSquared(mLl, 1, 1))); 
+      out << "    31    "; printRow(out, signedSqrt(displaySoftMassSquared(mLl, 1, 1))); 
       out << "      # meL(Q)" << endl;    
-      out << "    32    "; printRow(out, ccbSqrt(displaySoftMassSquared(mLl, 2, 2))); 
+      out << "    32    "; printRow(out, signedSqrt(displaySoftMassSquared(mLl, 2, 2))); 
       out << "      # mmuL(Q)" << endl;    
-      out << "    33    "; printRow(out, ccbSqrt(displaySoftMassSquared(mLl, 3, 3))); 
+      out << "    33    "; printRow(out, signedSqrt(displaySoftMassSquared(mLl, 3, 3))); 
       out << "      # mtauL(Q)" << endl;    
-      out << "    34    "; printRow(out, ccbSqrt(displaySoftMassSquared(mEr, 1, 1))); 
+      out << "    34    "; printRow(out, signedSqrt(displaySoftMassSquared(mEr, 1, 1))); 
       out << "      # meR(Q)" << endl;    
-      out << "    35    "; printRow(out, ccbSqrt(displaySoftMassSquared(mEr, 2, 2))); 
+      out << "    35    "; printRow(out, signedSqrt(displaySoftMassSquared(mEr, 2, 2))); 
       out << "      # mmuR(Q)" << endl;    
-      out << "    36    "; printRow(out, ccbSqrt(displaySoftMassSquared(mEr, 3, 3))); 
+      out << "    36    "; printRow(out, signedSqrt(displaySoftMassSquared(mEr, 3, 3))); 
       out << "      # mtauR(Q)" << endl;    
-      out << "    41    "; printRow(out, ccbSqrt(displaySoftMassSquared(mQl, 1, 1))); 
+      out << "    41    "; printRow(out, signedSqrt(displaySoftMassSquared(mQl, 1, 1))); 
       out << "      # mqL1(Q)" << endl;    
-      out << "    42    "; printRow(out, ccbSqrt(displaySoftMassSquared(mQl, 2, 2))); 
+      out << "    42    "; printRow(out, signedSqrt(displaySoftMassSquared(mQl, 2, 2))); 
       out << "      # mqL2(Q)" << endl;    
-      out << "    43    "; printRow(out, ccbSqrt(displaySoftMassSquared(mQl, 3, 3))); 
+      out << "    43    "; printRow(out, signedSqrt(displaySoftMassSquared(mQl, 3, 3))); 
       out << "      # mqL3(Q)" << endl;    
-      out << "    44    "; printRow(out, ccbSqrt(displaySoftMassSquared(mUr, 1, 1))); 
+      out << "    44    "; printRow(out, signedSqrt(displaySoftMassSquared(mUr, 1, 1))); 
       out << "      # muR(Q)" << endl;    
-      out << "    45    "; printRow(out, ccbSqrt(displaySoftMassSquared(mUr, 2, 2))); 
+      out << "    45    "; printRow(out, signedSqrt(displaySoftMassSquared(mUr, 2, 2))); 
       out << "      # mcR(Q)" << endl;    
-      out << "    46    "; printRow(out, ccbSqrt(displaySoftMassSquared(mUr, 3, 3))); 
+      out << "    46    "; printRow(out, signedSqrt(displaySoftMassSquared(mUr, 3, 3))); 
       out << "      # mtR(Q)" << endl;    
-      out << "    47    "; printRow(out, ccbSqrt(displaySoftMassSquared(mDr, 1, 1))); 
+      out << "    47    "; printRow(out, signedSqrt(displaySoftMassSquared(mDr, 1, 1))); 
       out << "      # mdR(Q)" << endl;    
-      out << "    48    "; printRow(out, ccbSqrt(displaySoftMassSquared(mDr, 2, 2))); 
+      out << "    48    "; printRow(out, signedSqrt(displaySoftMassSquared(mDr, 2, 2))); 
       out << "      # msR(Q)" << endl;    
-      out << "    49    "; printRow(out, ccbSqrt(displaySoftMassSquared(mDr, 3, 3))); 
+      out << "    49    "; printRow(out, signedSqrt(displaySoftMassSquared(mDr, 3, 3))); 
       out << "      # mbR(Q)" << endl;    
       
       out << "Block au Q= " << displayMu() << "  \n" 
