@@ -1,1 +1,2 @@
+<li> 12/12/13 SLHA printout doesn't take absolute values of soft mass squareds for printout at some scale Q, in case they're supposed to be negative. Thanks to S Knapen
 <li> 02/12/13 Reinstated block alpha to flavoursoft. Thanks to A Pukhov
